--- a/components/button/Button.module.css
+++ b/components/button/Button.module.css
@@ -1,7 +1,13 @@
-.btn {
-  border-radius: 10px;
+.btnSkills {
+  font-family: var(--primary-font-family);
+  background-color: #3c381d5e;
+  border: none;
+  border-radius: 6px;
+  color: white;
+  font-size: 1.5em;
+  padding: 0.5em 2em;
 }
-.primary {
-  color: antiquewhite;
-  background-color: darkslategray;
+.btnSkills:active,
+.btnSkills:hover {
+  background: #554d20;
 }
