--- a/components/Headers/SubHeader.module.css
+++ b/components/Headers/SubHeader.module.css
@@ -1,8 +1,8 @@
 .subHeader {
   color: var(--accent-color-blue);
   font-family: var(--subHead-font-family);
-  font-size: 1.5em;
+  font-size: var(--subHead-font-size);
 }
 .big {
-  font-size: 1.8em;
+  font-size: var(--subHead-font-size-big);
 }
