✨ Add an app header - upload Note Icon - add an Green accent color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,7 @@
   --accent-color-lightOrange: #ffb700;
   --accent-color-blue: #00aed9;
   --accent-color-orange: #ff8900;
+  --accent-color-green: #48cf3e;
 
   /* Fonts */
   --base-font-size: 1rem;
