💄 Adjust button padding

--- a/components/button/Button.module.css
+++ b/components/button/Button.module.css
@@ -5,7 +5,7 @@
   border-radius: 6px;
   color: white;
   font-size: 1.5em;
-  padding: 0.5em 2em;
+  padding: 0.5em 2em 0.4em;
 }
 .btnSkills:active,
 .btnSkills:hover {
