💄 Edit CSS for use in Start Page - Logo.modules.css - Header.modules.css

--- a/components/Headers/Header.module.css
+++ b/components/Headers/Header.module.css
@@ -2,6 +2,7 @@
   color: var(--accent-color-orange);
   font-family: var(--headline-font-family);
   font-size: var(--headline-font-size);
+  line-height: 0.8em;
 }
 .big {
   font-size: var(--headline-font-size-big);
