✨ Add a skill page - Skill page Button, Logo, Headers components

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -35,6 +35,13 @@
   line-height: 1.3em;
   text-align: center;
 }
-.logo {
+.logo,
+.logoSmall {
   text-align: center;
+}
+.logoSmall {
+  width: 60%;
+}
+.skillButtonsWrapper {
+  align-self: start;
 }
