--- a/components/button/Button.module.css
+++ b/components/button/Button.module.css
@@ -1,11 +1,13 @@
 .btnSkills {
-  font-family: var(--primary-font-family);
   background-color: #3c381d5e;
   border: none;
   border-radius: 6px;
   color: white;
+  font-family: var(--primary-font-family);
   font-size: 1.5em;
-  padding: 0.5em 2em 0.4em;
+  width: 100%;
+  padding: 0.6em 3em 0.4em;
+  margin: 0.5rem 0;
 }
 .btnSkills:active,
 .btnSkills:hover {
